Jlink
En teroria con eso esta lo del jlink